# Symgen

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py  websocket.py
backend/app/routers/: __init__.py  symgen.py
backend/app/services/: __init__.py  symgen.py
cli/: Cargo.toml
cli/src/: banner.rs  cli.rs  distros.rs  docker.rs  generator.rs  main.rs  output.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/generator/: page.tsx
frontend/components/: navbar.tsx
frontend/lib/: api.ts  websocket.ts
